# rust-log4rs-gelf

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  Readme.md  test.yml
examples/: Cargo.toml
examples/src/: main.rs
src/: appender.rs  batch.rs  builder.rs  error.rs  file.rs  formatter.rs  lib.rs  macros.rs  output.rs  result.rs
src/append/: tcp.rs
src/encode/: gelf.rs  mod.rs
