[package]
name = "log4rs-gelf"
version = "0.1.0"
authors = ["OVH SAS <github@ovh.net>"]

[features]
ovh-ldp = ["gelf_logger/ovh-ldp", "serde_gelf/ovh-ldp"]

[dependencies]
log = "0.4"
log4rs = "0.8"
serde-value = "0.5"
gelf_logger = { git = "https://github.com/ovh/gelf_logger" }
serde_gelf = { git = "https://github.com/ovh/serde_gelf" }
